// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderCanonicalMarkdownDocument > snapshots > snapshot render result summary 1`] = `
{
  "canonicalOutputPath": "docs/phase-1/a.md",
  "diagnosticCount": 0,
  "documentCanonicalId": "a",
  "gapCount": 0,
  "markdownLength": 1103,
  "phaseId": "phase-1",
  "renderedAt": "2025-01-01T00:00:00.000Z",
  "sectionCount": 1,
  "sourceCount": 1,
  "status": "generate",
}
`;

exports[`renderCanonicalMarkdownDocument > snapshots > snapshot rendered Markdown for missing-section fixture 1`] = `
{
  "canonicalOutputPath": "docs/phase-1/a.md",
  "diagnosticCount": 0,
  "documentCanonicalId": "a",
  "gapCount": 1,
  "gaps": [
    {
      "code": "E_MDR_SECTION_MISSING_CONTENT",
      "inputId": undefined,
      "sectionId": "section-a-1",
    },
  ],
  "markdownLength": 1562,
  "phaseId": "phase-1",
  "renderedAt": "2025-01-01T00:00:00.000Z",
  "sectionCount": 1,
  "sections": [
    {
      "descriptorOrder": 0,
      "gapCount": 1,
      "required": true,
      "sectionId": "section-a-1",
      "sourceCount": 0,
      "status": "gap_only",
      "title": "Core Definition",
    },
  ],
  "sourceCount": 0,
  "sources": [],
  "status": "incomplete",
}
`;

exports[`renderCanonicalMarkdownDocument > snapshots > snapshot rendered Markdown for traceability/source/gap markers 1`] = `
{
  "canonicalOutputPath": "docs/phase-1/a.md",
  "diagnosticCount": 0,
  "documentCanonicalId": "a",
  "gapCount": 0,
  "gaps": [],
  "markdownLength": 1989,
  "phaseId": "phase-1",
  "renderedAt": "2025-01-01T00:00:00.000Z",
  "sectionCount": 1,
  "sections": [
    {
      "descriptorOrder": 0,
      "gapCount": 0,
      "required": true,
      "sectionId": "section-a-1",
      "sourceCount": 0,
      "status": "rendered",
      "title": "Core Definition",
    },
  ],
  "sourceCount": 4,
  "sources": [
    {
      "recordId": "dec-001",
      "recordType": "decision",
    },
    {
      "recordId": "asm-001",
      "recordType": "assumption",
    },
    {
      "recordId": "q-001",
      "recordType": "open_question",
    },
    {
      "recordId": "risk-001",
      "recordType": "risk",
    },
  ],
  "status": "generate",
}
`;

exports[`renderCanonicalMarkdownDocument > snapshots > snapshot rendered Markdown for valid document fixture 1`] = `
{
  "canonicalOutputPath": "docs/phase-1/a.md",
  "diagnosticCount": 0,
  "documentCanonicalId": "a",
  "gapCount": 0,
  "gaps": [],
  "markdownLength": 1103,
  "phaseId": "phase-1",
  "renderedAt": "2025-01-01T00:00:00.000Z",
  "sectionCount": 1,
  "sections": [
    {
      "descriptorOrder": 0,
      "gapCount": 0,
      "required": true,
      "sectionId": "section-a-1",
      "sourceCount": 0,
      "status": "rendered",
      "title": "Core Definition",
    },
  ],
  "sourceCount": 1,
  "sources": [
    {
      "recordId": "dec-001",
      "recordType": "decision",
    },
  ],
  "status": "generate",
}
`;
